--- a/notebooks/covid19_analysis.ipynb
+++ b/notebooks/covid19_analysis.ipynb
@@ -2753,11 +2753,12 @@
    "metadata": {},
    "source": [
     "\n",
-    "Please feel free to contact me for further enquiries or feedback.\n",
-    "The correctness of this data can not by guaranteed.\n",
+    "Please feel free to contact me for further enquiries or feedback. Link to the GitHub repository: https://github.com/JayVeezy1/CS50_final_project\n",
+    "\n",
     "\n",
     "The dashboard was inspired by the following tutorial: https://www.youtube.com/watch?v=FngV4VdYrkA&list=LL&index=2&ab_channel=DataSciencewithHarshit\n",
-    "This data set is licensed under the Creative Commons Attribution 4.0 International (CC BY 4.0) by the Johns Hopkins University on behalf of its Center for Systems Science in Engineering. Copyright Johns Hopkins University 2020."
+    "This data set is licensed under the Creative Commons Attribution 4.0 International (CC BY 4.0) by the Johns Hopkins University on behalf of its Center for Systems Science in Engineering. Copyright Johns Hopkins University 2020. \n",
+    "The correctness of this data can not by guaranteed."
    ]
   }
  ],
